<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addReason"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hanmusictoronto.hansolo.procon.AddReason">

    <RadioGroup
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/proRadioButton"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:text="Pro"
            android:layout_gravity="right" />

        <RadioButton
            android:id="@+id/conRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Con"
            android:checked="false"
            android:layout_gravity="right" />

    </RadioGroup>

    <EditText
        android:id="@+id/goalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goalText"
        android:inputType="text" />

    <EditText
        android:id="@+id/reasonInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reasonName"
        android:inputType="text" />


    <TextView
        android:id="@+id/reasonWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reasonWeight"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/reasonWeightBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dsb_max="10"
        app:dsb_min="0"
        app:dsb_value="0" />


    <Button
        android:id="@+id/addReasonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/addReasonButton" />

</LinearLayout>